ändrat style på main

--- a/src/Component/Main.css
+++ b/src/Component/Main.css
@@ -1,4 +1,11 @@
-.main header{
+.main {
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
+    background-color: #F2F2F2;
+    height: 100vh;
+}
+
+.main header {
+  
+
 }
