--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@
     border-radius: 7px;
     margin-top: 20px;
     text-align: center;
+    
 }
 .dialogbox p{
   padding-top: 50px;
@@ -61,11 +62,12 @@
   border: 1px solid #eee;
   border-radius: 20px;
   transition: border-color .5s ease-out;
-  height: 30px;
+  height: 50px;
   width: 300px;
   background-color: #FFA300;
   opacity: 0.7;
-  margin-top: 190px;
+  margin-top: 180px;
+  font-size: 16px;
 }
 
 .logOutButton {
