--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,17 @@
 .App {
   display: flex;
   flex-direction: column;
-  background-color: #F2F2F2;
   height: 100vh;
+  background-color: #F2F2F2;
+
 }
 
 .main {
    float: left;
-   width: 178vh;
+   width: 80%;
    background-color: #FFA300;
    opacity: 0.7;
-   height: 78vh;
+   height: 100vh;
 }
 
 
@@ -19,62 +20,78 @@
 
 }
 
-.name {
-  margin-right: 100px;
-  margin-top: 20px;
-}
 
 .header img {
-  margin-top: 20px;
-  margin-right: 50px;
+  margin-left: 60px;
+
 }
 
 .header {
   height: 160px;
   display: flex;
   justify-content: space-between;
+  background-color: #F2F2F2;
+
 
 }
 
 .sidebar {
   float: left;
-  width: 25vh;
-  height: 77vh;
-
+  width: 20%;
+  height: 100vh;
+  background-color: #DCDCDC;
 
 }
 
 .dialogbox{
     width: 600px;
     height: 400px;
-    background-color: #FFA300;
+    background-color: #DCDCDC;
     margin: auto;
     border-radius: 7px;
-    opacity: 0.7;
     margin-top: 20px;
     text-align: center;
+
+}
+.dialogbox p{
+  padding-top: 50px;
+  margin: 20px;
 }
 
 .dialogbox button {
-
-  border: none;
   cursor:pointer;
-  outline:none;
-  background-color: #F2F2F2;
+  border: 1px solid #eee;
+  border-radius: 20px;
+  transition: border-color .5s ease-out;
+  height: 50px;
+  width: 300px;
+  background-color: #FFA300;
+  opacity: 0.7;
+  margin-top: 180px;
+  font-size: 16px;
 }
 
 .logOutButton {
-  border: none;
   cursor:pointer;
-  outline:none;
-
-  opacity: 0.7;
   border: 1px solid #eee;
-  border-radius: 5px;
+  border-radius: 20px;
   transition: border-color .5s ease-out;
   height: 30px;
   width: 300px;
+  background-color: #DCDCDC;
+  font-size: 16px;
 }
+
+.nameContainer {
+  margin-right: 60px;
+  margin-top: 75px;
+}
+
+.name{
+  font-size: 20px;
+  text-align: center;
+}
+
 
 .createFolderModal{
   width: 300px;
