--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,72 @@
-.App {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  background-color: #F2F2F2;
+* {
+  font-family: 'Merriweather Sans', sans-serif;
+  color: #4B4B4B;
 }
 
 
+.App {
+  display: flex;
+  flex-direction: column;
+
+  background-color: #F2F2F2;
+}
+
+.login{
+  width: 100%;
+  background-color:  #FFA300;
+  height: 75.6vh;
+}
+
+
+.table {
+  margin: auto;
+  margin-top: 90px;
+}
+
+tr,th{
+  text-align: left;
+  margin-top: 50px;
+}
+
+tr,td{
+  padding-right: 60px;
+
+}
 .main {
    float: left;
    width: 80%;
    background-color: #FFA300;
-   opacity: 0.7;
    height: 100vh;
 }
-
+h2 {
+  margin-left: 24px;
+  margin-top: 20px;
+}
 .search input {
-  border: 1px solid #eee;
-  border-radius: 20px;
-  transition: border-color .5s ease-out;
+  border: none;
+  border-radius: 10px;
   height: 28px;
-  width: 300px;
-  background-color: #DCDCDC;
-  font-size: 16px;
+  width: 260px;
   margin-top: 120px;
+  background-color: #DCDCDC;
 
 }
+.files {
+  margin-top: 130px;
+  padding-left: 50px;
+}
 
-.searchIcon {
-  position: relative;
+.search {
+  margin-right: 280px;
 }
 
 .header img {
   margin-left: 60px;
+  margin-top: 17px;
 }
 
 .header {
-  height: 160px;
+  height: 21.5vh;
   display: flex;
   justify-content: space-between;
   background-color: #F2F2F2;
@@ -46,6 +77,11 @@
   width: 20%;
   height: 100vh;
   background-color: #DCDCDC;
+
+}
+
+a{
+  color: #4B4B4B;
 }
 
 .dialogbox {
@@ -54,7 +90,6 @@
     background-color: #DCDCDC;
     margin: auto;
     border-radius: 7px;
-    margin-top: 20px;
     text-align: center;
 }
 
@@ -65,37 +100,32 @@
 
 .dialogbox button {
   cursor:pointer;
-  border: 1px solid #eee;
+  border: none;
   border-radius: 20px;
-  transition: border-color .5s ease-out;
   height: 50px;
   width: 300px;
-  background-color: #FFA300;
-  opacity: 0.7;
   margin-top: 180px;
   font-size: 16px;
+  background-color:  #FFA300;
 }
 
 .logOutButton {
   cursor:pointer;
-  border: 1px solid #eee;
-  border-radius: 20px;
-  transition: border-color .5s ease-out;
+  border: none;
+  border-radius: 10px;
   height: 30px;
-  width: 300px;
+  width: 260px;
   background-color: #DCDCDC;
   font-size: 16px;
 }
 
 .nameContainer {
-  margin-right: 60px;
-  margin-top: 95px;
-}
-
-.name {
-  font-size: 20px;
+  margin-right: 20px;
+  margin-top: 100px;
+  font-size: 16px;
   text-align: center;
 }
+
 
 
 .createFolderModal {
