--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
    height: 100vh;
 }
 
-
+z
 
 .login{
 
@@ -51,7 +51,7 @@
     border-radius: 7px;
     margin-top: 20px;
     text-align: center;
-    
+
 }
 .dialogbox p{
   padding-top: 50px;
