--- a/src/App.css
+++ b/src/App.css
@@ -2,35 +2,26 @@
   font-family: 'Merriweather Sans', sans-serif;
   color: #4B4B4B;
 }
-
-
 .App {
   display: flex;
   flex-direction: column;
-
   background-color: #F2F2F2;
 }
-
 .login{
   width: 100%;
   background-color:  #FFA300;
   height: 75.6vh;
 }
-
-
 .table {
   margin: auto;
   margin-top: 90px;
 }
-
 tr,th{
   text-align: left;
   margin-top: 50px;
 }
-
 tr,td{
   padding-right: 60px;
-
 }
 .main {
    float: left;
@@ -49,41 +40,40 @@ h2 {
   width: 260px;
   margin-top: 120px;
   background-color: #DCDCDC;
-
+}
+.search {
+  position: relative;
+  padding-right: 580px;
+}
+.material-icons{
+  position: absolute;
+  left: 4px;
+  bottom: -1px;
+  user-select: none;
 }
 .files {
   margin-top: 130px;
   padding-left: 50px;
 }
-
-.search {
-  margin-right: 280px;
-}
-
 .header img {
   margin-left: 60px;
-  margin-top: 17px;
+  margin-top: 10px;
 }
-
 .header {
   height: 21.5vh;
   display: flex;
   justify-content: space-between;
   background-color: #F2F2F2;
 }
-
 .sidebar {
   float: left;
   width: 20%;
   height: 100vh;
   background-color: #DCDCDC;
-
 }
-
 a{
   color: #4B4B4B;
 }
-
 .dialogbox {
     width: 600px;
     height: 400px;
@@ -92,12 +82,10 @@ a{
     border-radius: 7px;
     text-align: center;
 }
-
 .dialogbox p{
   padding-top: 50px;
   margin: 20px;
 }
-
 .dialogbox button {
   cursor:pointer;
   border: none;
@@ -108,7 +96,6 @@ a{
   font-size: 16px;
   background-color:  #FFA300;
 }
-
 .logOutButton {
   cursor:pointer;
   border: none;
@@ -118,16 +105,12 @@ a{
   background-color: #DCDCDC;
   font-size: 16px;
 }
-
 .nameContainer {
   margin-right: 20px;
   margin-top: 100px;
   font-size: 16px;
   text-align: center;
 }
-
-
-
 .createFolderModal {
   width: 300px;
   height: 200px;
@@ -140,3 +123,10 @@ a{
   align-items: center;
   justify-content: center;
 }
+
+
+
+
+
+
+
