--- a/src/App.css
+++ b/src/App.css
@@ -2,24 +2,32 @@
   font-family: 'Merriweather Sans', sans-serif;
   color: #4B4B4B;
 }
+
 .App {
   display: flex;
   flex-direction: column;
   background-color: #F2F2F2;
+
 }
 .login{
-  width: 100%;
+  width: 100vw;
   background-color:  #FFA300;
-  height: 75.6vh;
+  height: 78.6vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
 .table {
   margin: auto;
   margin-top: 90px;
 }
+
 tr,th{
   text-align: left;
   margin-top: 50px;
 }
+
 tr,td{
   padding-right: 60px;
 }
@@ -43,8 +51,8 @@ h2 {
   width: 260px;
   margin-top: 120px;
   background-color: #DCDCDC;
-
 }
+
 .search {
   position: relative;
   padding-right: 580px;
@@ -73,6 +81,7 @@ h2 {
   margin-top: 130px;
   padding-left: 50px;
 }
+
 .header img {
   margin-left: 60px;
   margin-top: 10px;
@@ -91,6 +100,7 @@ h2 {
   height: 100vh;
   background-color: #DCDCDC;
 }
+
 a{
   color: #4B4B4B;
 }
@@ -100,9 +110,11 @@ a{
     height: 400px;
     background-color: #DCDCDC;
     margin: auto;
+    
     border-radius: 7px;
     text-align: center;
 }
+
 .dialogbox p{
   padding-top: 50px;
   margin: 20px;
@@ -114,7 +126,7 @@ a{
   border-radius: 20px;
   height: 50px;
   width: 300px;
-  margin-top: 180px;
+  margin-top: 100px;
   font-size: 16px;
   background-color:  #FFA300;
 }
@@ -160,4 +172,25 @@ a{
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+}
+
+.breadcrumbs{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.breadcrumbs ul li{
+  list-style-type: none;
+}
+
+.handleFileDots{
+  border-radius: 50%;
+  width: 2rem;
+  height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0.5;
+  border-style: none;
 }
