--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   background-color: #F2F2F2;
 }
+
 .login{
   width: 100%;
   background-color:  #FFA300;
@@ -59,7 +60,8 @@ h2 {
 
 .search {
   position: relative;
-  padding-right: 580px;
+  /*padding-right: 580px;*/
+  padding: 0px;
 }
 
 .material-icons{
@@ -76,11 +78,21 @@ h2 {
 .header img {
   margin-left: 60px;
   margin-top: 10px;
+  margin-right: 70px;
 }
 
 .header {
   height: 21.5vh;
   display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  background-color: #F2F2F2;
+}
+.headerDiv {
+  width: 100%;
+  height: 21.5vh;
+  display: flex;
+  flex-direction: row;
   justify-content: space-between;
   background-color: #F2F2F2;
 }
