--- a/src/App.css
+++ b/src/App.css
@@ -20,14 +20,8 @@
 }
 
 .table {
-  
   margin-top: 50px;
-
   margin-left: 40px;
-  display: flex;
-  flex-wrap: wrap;
-  box-sizing: border-box;
-  height: 30vw;
   overflow-y: scroll;
   overflow-x: hidden;
 }
@@ -43,8 +37,6 @@ tr,td{
   padding-bottom: 5px;
   margin: 0px;
   border: none;
-  display: flex;
-  flex-wrap: wrap;
 }
 
 .table thead{
@@ -52,10 +44,11 @@ tr,td{
 }
 
 .main {
-  float: left;
   width: 80vw;
   background-color: #FFA300;
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .search input {
@@ -111,6 +104,7 @@ tr,td{
   justify-content: flex-start;
   background-color: #F2F2F2;
 }
+
 .headerDiv {
   width: 100%;
   height: 21.5vh;
@@ -123,13 +117,12 @@ tr,td{
 .sidebar {
   float: left;
   width: 20%;
-  height: 100vh;
   background-color: #DCDCDC;
+  min-height: 100vh;
 }
 
 .sidebar label{
   padding-right: 8px;
-  
 }
 
 a{
@@ -205,21 +198,9 @@ a{
   background-color: #F2F2F2;
 }
 
-.breadcrumbs{
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-}
-
 .breadcrumbs ul li{
   list-style-type: none;
 }
-
-.pathpiece::after{
-  content: (' > ');
-  transition: transform ease-in-out .2s;
-}
-
 
 .handleFileDots{
   border-radius: 50%;
