--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@
   box-sizing: border-box;
   height: 30vw;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 tr,th{
@@ -118,7 +119,7 @@ a{
     height: 400px;
     background-color: #DCDCDC;
     margin: auto;
-    
+
     border-radius: 7px;
     text-align: center;
 }
